--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Horiseon Branding Experts</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./Develop/assets/css/style.css">
     
 </head>
 
@@ -30,26 +30,27 @@
             </nav>
         </div>
     </header>
+
     <!-- hero/jumbotron -->
     <div class="hero"></div>
 
         <div class="content">
             <section id="search-engine-optimization" class="search-engine-optimization">
-                <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="notebook with a coffee" />
+                <img src="./Develop/assets/images/search-engine-optimization.jpg" class="float-left" alt="notebook with a coffee" />
                 <h2>Search Engine Optimization</h2>
                 <p>
                     The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
                 </p>
             </section>
             <section id="online-reputation-management" class="online-reputation-management">
-                <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="person working on laptop with cellphone"/>
+                <img src="./Develop/assets/images/online-reputation-management.jpg" class="float-right" alt="person working on laptop with cellphone"/>
                 <h2>Online Reputation Management</h2>
                 <p>
                     The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
                 </p>
             </section>
             <section id="social-media-marketing" class="social-media-marketing">
-                <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="people collaborating"/>
+                <img src="./Develop/assets/images/social-media-marketing.jpg" class="float-left" alt="people collaborating"/>
                 <h2>Social Media Marketing</h2>
                 <p>
                     Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -61,21 +62,21 @@
     <section id="company benefits" class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" alt="lead generation"/>
+            <img src="./Develop/assets/images/lead-generation.png" alt="lead generation"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt="brand awareness"/>
+            <img src="./Develop/assets/images/brand-awareness.png" alt="brand awareness"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
         <div class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt="cost management" />
+            <img src="./Develop/assets/images/cost-management.png" alt="cost management" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
